# advent2025

./: .gitignore  MODULE.bazel  WORKSPACE
helper/: BUILD.bazel  Helper.java
p1/: BUILD.bazel  Puzzle.java  Puzzlev2.java  Puzzlev3.java
p10/: BUILD.bazel  Puzzle.java  Puzzlev2.java  Puzzlev3.java
p11/: BUILD.bazel  Puzzle.java  Puzzlev2.java  Puzzlev3.java
p12/: BUILD.bazel  Puzzle.java
p2/: BUILD.bazel  Puzzle.java  Puzzlev2.java  Puzzlev3.java
p3/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p4/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p5/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p6/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p7/: BUILD.bazel  Puzzle.java  Puzzlev2.java
p8/: BUILD.bazel  Puzzle.java  Puzzlev2.java  Puzzlev3.java
p9/: BUILD.bazel  Puzzle.java  Puzzlev2.java
template/: Puzzle.java
